# tp_project

./: .travis.yml  CMakeLists.txt  README.md  build.sh  documentation.txt  gameplay.cpp  gameplay.h  main.cpp  run.sh  tests.cpp
army/: CMakeLists.txt  aliance.cpp  aliance.h  army.cpp  army.h  horde.cpp  horde.h  items.cpp  items.h
ci/: install-linux.sh
documentation/: behavioral.txt  gameplay.txt  structural.txt
scenaries/: sc_1.txt  sc_2.txt  sc_3.txt
